crates/wdl-analysis/tests/validation/exponentiation-unsupported/source.errors
error: use of the exponentiation operator requires WDL version 1.2
  ┌─ tests/validation/exponentiation-unsupported/source.wdl:5:16
  │
5 │     Int x = 10 ** 10
  │                ^^

