crates/wdl-analysis/tests/validation/exponentiation-unsupported/source.wdl
## This is a test of the exponentiation operator not being supported
version 1.1

task test {
    Int x = 10 ** 10
    command <<<>>>
}
